[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stickersbot"
description = "Sticker packs for all your Delta Chat needs"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["deltachat", "bot"]
authors = [
  {name = "adbenitez", email = "adb@merlinux.eu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "deltabot-cli>=8.0.0,<9.0",
    "signalstickers-client>=3.3.0",
    "emoji>=2.15.0",
    "cachelib>=0.13.0",
    "requests>=2.32.5,<3.0",
    "pillow>=12.0.0",
    "rembg[cpu]>=2.0.68",
]

[project.urls]
Homepage = "https://github.com/deltachat-bot/stickersbot"

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
  "types-emoji",
  "types-requests",
]

[project.scripts]
stickersbot = "stickersbot:main"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm
version_file = "stickersbot/_version.py"

[tool.setuptools]
packages = ["stickersbot"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
